--- a/Teraoka/Views/Cell/ExistingOrderCell/ExistingOrderCell.xib
+++ b/Teraoka/Views/Cell/ExistingOrderCell/ExistingOrderCell.xib
@@ -19,24 +19,36 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExistingOrderCellID" rowHeight="95" id="KGk-i7-Jjw" customClass="ExistingOrderCell">
-            <rect key="frame" x="0.0" y="0.0" width="703" height="95"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExistingOrderCellID" rowHeight="129" id="KGk-i7-Jjw" customClass="ExistingOrderCell">
+            <rect key="frame" x="0.0" y="0.0" width="703" height="129"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="703" height="94.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="703" height="128.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X6N-fy-QUf">
-                        <rect key="frame" x="0.0" y="0.0" width="703" height="94.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="703" height="128.5"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_product_image" translatesAutoresizingMaskIntoConstraints="NO" id="5yx-44-QlZ">
-                                <rect key="frame" x="0.0" y="0.0" width="150" height="94.5"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="opO-27-bKW">
+                                <rect key="frame" x="0.0" y="0.0" width="150" height="128.5"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_product_image" translatesAutoresizingMaskIntoConstraints="NO" id="5yx-44-QlZ">
+                                        <rect key="frame" x="0.0" y="14.5" width="150" height="100"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="150" id="oxj-VK-nnr"/>
+                                            <constraint firstAttribute="height" constant="100" id="qwB-HA-afv"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="150" id="oxj-VK-nnr"/>
+                                    <constraint firstAttribute="width" constant="150" id="3dP-gv-8Dn"/>
+                                    <constraint firstItem="5yx-44-QlZ" firstAttribute="centerX" secondItem="opO-27-bKW" secondAttribute="centerX" id="ByJ-oT-9kS"/>
+                                    <constraint firstItem="5yx-44-QlZ" firstAttribute="centerY" secondItem="opO-27-bKW" secondAttribute="centerY" id="FdA-7E-EX9"/>
                                 </constraints>
-                            </imageView>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XwX-19-Ef1">
-                                <rect key="frame" x="150" y="0.0" width="103" height="94.5"/>
+                                <rect key="frame" x="150" y="0.0" width="103" height="128.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l7S-H3-FVa">
                                         <rect key="frame" x="8" y="8" width="43" height="20.5"/>
@@ -45,7 +57,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xel-8c-8el">
-                                        <rect key="frame" x="0.0" y="28.5" width="103" height="66"/>
+                                        <rect key="frame" x="0.0" y="28.5" width="103" height="100"/>
                                         <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="17"/>
                                         <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -62,10 +74,10 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bzu-U8-1IT">
-                                <rect key="frame" x="253" y="0.0" width="150" height="94.5"/>
+                                <rect key="frame" x="253" y="0.0" width="150" height="128.5"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nPy-gM-rWv">
-                                        <rect key="frame" x="31" y="25.5" width="88" height="44"/>
+                                        <rect key="frame" x="31" y="42.5" width="88" height="44"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="M88-l4-olH"/>
                                             <constraint firstAttribute="width" constant="88" id="WyI-iR-STX"/>
@@ -83,7 +95,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0TU-8I-2MK">
-                                <rect key="frame" x="403" y="0.0" width="150" height="94.5"/>
+                                <rect key="frame" x="403" y="0.0" width="150" height="128.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="q7K-Be-PRB"/>
                                 </constraints>
@@ -92,7 +104,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DOL-GG-nVg">
-                                <rect key="frame" x="553" y="0.0" width="150" height="94.5"/>
+                                <rect key="frame" x="553" y="0.0" width="150" height="128.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="1mG-LF-73e"/>
                                 </constraints>
@@ -118,7 +130,7 @@
                 <outlet property="productImage" destination="5yx-44-QlZ" id="myN-I2-tdW"/>
                 <outlet property="tfQuantity" destination="nPy-gM-rWv" id="d59-iO-dGj"/>
             </connections>
-            <point key="canvasLocation" x="273.5" y="87.5"/>
+            <point key="canvasLocation" x="256.80000000000001" y="102.09895052473765"/>
         </tableViewCell>
     </objects>
     <resources>
