--- a/Teraoka/Views/Cell/OrderSummaryCell/OrderSummaryCell.xib
+++ b/Teraoka/Views/Cell/OrderSummaryCell/OrderSummaryCell.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -28,19 +27,20 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_product_image" translatesAutoresizingMaskIntoConstraints="NO" id="g5z-Ri-cmZ">
-                        <rect key="frame" x="0.0" y="0.0" width="162.5" height="162.5"/>
+                        <rect key="frame" x="0.0" y="31.5" width="150" height="100"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="g5z-Ri-cmZ" secondAttribute="height" multiplier="1:1" id="QvX-0q-qk4"/>
+                            <constraint firstAttribute="width" constant="150" id="BI4-fZ-tmz"/>
+                            <constraint firstAttribute="height" constant="100" id="INw-uM-3wm"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jce-CI-V6l">
-                        <rect key="frame" x="174" y="12" width="43" height="20"/>
+                        <rect key="frame" x="162" y="12" width="43" height="20"/>
                         <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="17"/>
                         <color key="textColor" red="0.21960784310000001" green="0.74509803919999995" blue="0.64705882349999999" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="No options available." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ypd-kV-3S0">
-                        <rect key="frame" x="163" y="32" width="59" height="131"/>
+                        <rect key="frame" x="150" y="32" width="72" height="130.5"/>
                         <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="17"/>
                         <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -143,12 +143,11 @@
                     <constraint firstItem="jce-CI-V6l" firstAttribute="leading" secondItem="g5z-Ri-cmZ" secondAttribute="trailing" constant="12" id="9Vg-eL-Hf5"/>
                     <constraint firstItem="A9F-x9-bz2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Ntp-rP-n14"/>
                     <constraint firstItem="g5z-Ri-cmZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Rk5-Ze-DRM"/>
-                    <constraint firstAttribute="bottom" secondItem="g5z-Ri-cmZ" secondAttribute="bottom" id="TIi-Uu-dRH"/>
                     <constraint firstAttribute="trailing" secondItem="A9F-x9-bz2" secondAttribute="trailing" id="WAs-Hq-LrL"/>
                     <constraint firstAttribute="bottom" secondItem="A9F-x9-bz2" secondAttribute="bottom" id="dlV-cM-Rhu"/>
-                    <constraint firstItem="g5z-Ri-cmZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="fX3-ji-PYo"/>
                     <constraint firstItem="jce-CI-V6l" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="flE-6i-MTj"/>
                     <constraint firstItem="A9F-x9-bz2" firstAttribute="leading" secondItem="ypd-kV-3S0" secondAttribute="trailing" id="hWu-7b-Kpg"/>
+                    <constraint firstItem="g5z-Ri-cmZ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="nfF-59-8xn"/>
                     <constraint firstAttribute="bottom" secondItem="ypd-kV-3S0" secondAttribute="bottom" id="xtL-JN-S1L"/>
                 </constraints>
             </tableViewCellContentView>
