--- a/Teraoka/Views/Cell/OptionCell/OptionSelectedTableCell/OptionSelectedTableCell.xib
+++ b/Teraoka/Views/Cell/OptionCell/OptionSelectedTableCell/OptionSelectedTableCell.xib
@@ -64,26 +64,19 @@
                                 <color key="textColor" red="0.1529411765" green="0.1529411765" blue="0.1529411765" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="xID-am-QkR">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WWe-yb-G8u">
                                 <rect key="frame" x="0.0" y="30" width="288" height="73"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6AU-Mw-0vh">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                            </collectionView>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="qmf-yy-wae" firstAttribute="top" secondItem="ESy-J6-ER3" secondAttribute="top" constant="5" id="080-ze-1CN"/>
                             <constraint firstItem="qmf-yy-wae" firstAttribute="leading" secondItem="ESy-J6-ER3" secondAttribute="leading" constant="30" id="0ta-qL-WZX"/>
-                            <constraint firstItem="xID-am-QkR" firstAttribute="top" secondItem="qmf-yy-wae" secondAttribute="bottom" constant="5" id="AiJ-RA-m6l"/>
-                            <constraint firstAttribute="trailing" secondItem="xID-am-QkR" secondAttribute="trailing" id="DS7-X1-HXi"/>
-                            <constraint firstAttribute="bottom" secondItem="xID-am-QkR" secondAttribute="bottom" id="ICM-Wl-3im"/>
-                            <constraint firstItem="xID-am-QkR" firstAttribute="leading" secondItem="ESy-J6-ER3" secondAttribute="leading" id="ktC-5G-xcf"/>
-                            <constraint firstAttribute="bottom" secondItem="xID-am-QkR" secondAttribute="bottom" id="oRK-fm-AV8"/>
+                            <constraint firstAttribute="bottom" secondItem="WWe-yb-G8u" secondAttribute="bottom" id="K76-r4-mJu"/>
+                            <constraint firstItem="WWe-yb-G8u" firstAttribute="top" secondItem="qmf-yy-wae" secondAttribute="bottom" constant="5" id="agz-xD-Fgp"/>
+                            <constraint firstItem="WWe-yb-G8u" firstAttribute="leading" secondItem="ESy-J6-ER3" secondAttribute="leading" id="iJC-Qm-08N"/>
+                            <constraint firstAttribute="trailing" secondItem="WWe-yb-G8u" secondAttribute="trailing" id="kkG-wr-Won"/>
                         </constraints>
                     </view>
                     <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tsc-M2-8fO">
@@ -114,8 +107,8 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
-                <outlet property="colView" destination="xID-am-QkR" id="vwU-LX-qN1"/>
                 <outlet property="lbSelected" destination="Bc8-CB-IdK" id="jsi-JX-Sxu"/>
+                <outlet property="optionContainerView" destination="WWe-yb-G8u" id="54z-PA-B3H"/>
                 <outlet property="preferenceContentView" destination="ESy-J6-ER3" id="MOz-gs-aZs"/>
             </connections>
             <point key="canvasLocation" x="5.5999999999999996" y="98.050974512743636"/>
